Record PLAN-0001 Phase 1 completion
Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01Ntz3XUgfXKNuTFGDmX3pSj